correction de  z-index des postits et popups

--- a/public/css/modifier.css
+++ b/public/css/modifier.css
@@ -222,7 +222,7 @@ h2{
   display:none;
   justify-content:center;
   align-items:center;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .contenu_postit{
